...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Notes" />

            <EditText
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="top|left"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOff="Add to Favorites"
                android:textOn="Remove from Favorites" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
