...
                    android:text="@string/general_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/notes_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
...
                android:layout_height="wrap_content"
                android:text="@string/notes_title"
                android:textSize="@dimen/home_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/route_notes_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_placeholder" />
        </LinearLayout>

        <LinearLayout
...
