...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/general_padding"
                    android:paddingRight="@dimen/general_padding">

                    <EditText
                        android:id="@+id/routeName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:hint="Route Name"
                        android:inputType="textPersonName" />
...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textOff="Add to Favorites"
                        android:textOn="Remove from Favorites" />

                    <Button
                        android:id="@+id/saveButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="4dp"
                        android:text="@string/save_button_text" />
                </LinearLayout>
...
